[project]
name = "pytun-pmd3"
version = "0.0.1"
description = "python-pytun fork with Darwin support"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["tun", "tuntap", "darwin", "pymobiledevice3", "macos"]
authors = [
    { name = "doronz88", email = "doron88@gmail.com" }
]
maintainers = [
    { name = "doronz88", email = "doron88@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/doronz88/pytun-pmd3"
"Bug Reports" = "https://github.com/doronz88/pytun-pmd3/issues"

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
